y.output
State 411 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'

    8 $@1: ε

    9 postfix_expression: postfix_expression '(' $@1 argument_expression_list ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP
   14                   | '(' type_name ')' '{' initializer_list '}'
   15                   | '(' type_name ')' '{' initializer_list ',' '}'

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list ',' assignment_expression

   18 unary_expression: postfix_expression
   19                 | INC_OP unary_expression
   20                 | DEC_OP unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF '(' type_name ')'

   24 unary_operator: '&'
   25               | '*'
   26               | '+'
   27               | '-'
   28               | '~'
   29               | '!'

   30 cast_expression: unary_expression
   31                | '(' type_name ')' cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression '*' cast_expression
   34                          | multiplicative_expression '/' cast_expression
   35                          | multiplicative_expression '%' cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression '+' multiplicative_expression
   38                    | additive_expression '-' multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_OP additive_expression
   41                 | shift_expression RIGHT_OP additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression '<' shift_expression
   44                      | relational_expression '>' shift_expression
   45                      | relational_expression LE_OP shift_expression
   46                      | relational_expression GE_OP shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression EQ_OP relational_expression
   49                    | equality_expression NE_OP relational_expression

   50 and_expression: equality_expression
   51               | and_expression '&' equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression '^' and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression AND_OP inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression OR_OP logical_and_expression

   60 conditional_expression: logical_or_expression
   61                       | logical_or_expression '?' expression ':' conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: '='
   65                    | MUL_ASSIGN
   66                    | DIV_ASSIGN
   67                    | MOD_ASSIGN
   68                    | ADD_ASSIGN
   69                    | SUB_ASSIGN
   70                    | LEFT_ASSIGN
   71                    | RIGHT_ASSIGN
   72                    | AND_ASSIGN
   73                    | XOR_ASSIGN
   74                    | OR_ASSIGN

   75 expression: assignment_expression
   76           | expression ',' assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers ';'
   79            | declaration_specifiers init_declarator_list ';'

   80 declaration_specifiers: storage_class_specifier
   81                       | storage_class_specifier declaration_specifiers
   82                       | type_specifier
   83                       | type_specifier declaration_specifiers
   84                       | type_qualifier
   85                       | type_qualifier declaration_specifiers
   86                       | function_specifier
   87                       | function_specifier declaration_specifiers

   88 init_declarator_list: init_declarator
   89                     | init_declarator_list ',' init_declarator

   90 init_declarator: declarator
   91                | declarator '=' initializer

   92 $@2: ε

   93 storage_class_specifier: $@2 TYPEDEF

   94 $@3: ε

   95 storage_class_specifier: $@3 EXTERN

   96 $@4: ε

   97 storage_class_specifier: $@4 STATIC

   98 $@5: ε

   99 storage_class_specifier: $@5 AUTO

  100 $@6: ε

  101 storage_class_specifier: $@6 REGISTER

  102 $@7: ε

  103 type_specifier: $@7 VOID

  104 $@8: ε

  105 type_specifier: $@8 CHAR

  106 $@9: ε

  107 type_specifier: $@9 SHORT

  108 $@10: ε

  109 type_specifier: $@10 INT

  110 $@11: ε

  111 type_specifier: $@11 LONG

  112 $@12: ε

  113 type_specifier: $@12 FLOAT

  114 $@13: ε

  115 type_specifier: $@13 DOUBLE

  116 $@14: ε

  117 type_specifier: $@14 SIGNED

  118 $@15: ε

  119 type_specifier: $@15 UNSIGNED

  120 $@16: ε

  121 type_specifier: $@16 BOOL

  122 $@17: ε

  123 type_specifier: $@17 COMPLEX

  124 $@18: ε

  125 type_specifier: $@18 IMAGINARY
  126               | USER_DEFINED
  127               | struct_or_union_specifier
  128               | enum_specifier

  129 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  130                          | struct_or_union '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  137 specifier_qualifier_list: type_qualifier
  138                         | type_qualifier specifier_qualifier_list
  139                         | type_specifier
  140                         | type_specifier specifier_qualifier_list

  141 struct_declarator_list: struct_declarator
  142                       | struct_declarator_list ',' struct_declarator

  143 struct_declarator: declarator
  144                  | ':' constant_expression
  145                  | declarator ':' constant_expression

  146 enum_specifier: ENUM '{' enumerator_list '}'
  147               | ENUM IDENTIFIER '{' enumerator_list '}'
  148               | ENUM '{' enumerator_list ',' '}'
  149               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  150               | ENUM IDENTIFIER

  151 enumerator_list: enumerator
  152                | enumerator_list ',' enumerator

  153 enumerator: IDENTIFIER
  154           | IDENTIFIER '=' constant_expression

  155 type_qualifier: CONST
  156               | RESTRICT
  157               | VOLATILE

  158 function_specifier: INLINE

  159 declarator: pointer direct_declarator
  160           | direct_declarator

  161 direct_declarator: IDENTIFIER
  162                  | '(' declarator ')'
  163                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  164                  | direct_declarator '[' type_qualifier_list ']'
  165                  | direct_declarator '[' assignment_expression ']'
  166                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  167                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  168                  | direct_declarator '[' type_qualifier_list '*' ']'
  169                  | direct_declarator '[' '*' ']'
  170                  | direct_declarator '[' ']'
  171                  | direct_declarator '(' parameter_type_list ')'
  172                  | direct_declarator '(' identifier_list ')'
  173                  | direct_declarator '(' ')'

  174 pointer: '*'
  175        | '*' type_qualifier_list
  176        | '*' pointer
  177        | '*' type_qualifier_list pointer

  178 type_qualifier_list: type_qualifier
  179                    | type_qualifier_list type_qualifier

  180 parameter_type_list: parameter_list
  181                    | parameter_list ',' ELLIPSIS

  182 parameter_list: parameter_declaration
  183               | parameter_list ',' parameter_declaration

  184 parameter_declaration: declaration_specifiers declarator
  185                      | declaration_specifiers abstract_declarator
  186                      | declaration_specifiers

  187 identifier_list: IDENTIFIER
  188                | identifier_list ',' IDENTIFIER

  189 type_name: specifier_qualifier_list
  190          | specifier_qualifier_list abstract_declarator

  191 abstract_declarator: pointer
  192                    | direct_abstract_declarator
  193                    | pointer direct_abstract_declarator

  194 direct_abstract_declarator: '(' abstract_declarator ')'
  195                           | '[' ']'
  196                           | '[' assignment_expression ']'
  197                           | direct_abstract_declarator '[' ']'
  198                           | direct_abstract_declarator '[' assignment_expression ']'
  199                           | '[' '*' ']'
  200                           | direct_abstract_declarator '[' '*' ']'
  201                           | '(' ')'
  202                           | '(' parameter_type_list ')'
  203                           | direct_abstract_declarator '(' ')'
  204                           | direct_abstract_declarator '(' parameter_type_list ')'

  205 initializer: assignment_expression
  206            | '{' initializer_list '}'
  207            | '{' initializer_list ',' '}'

  208 initializer_list: initializer
  209                 | designation initializer
  210                 | initializer_list ',' initializer
  211                 | initializer_list ',' designation initializer

  212 designation: designator_list '='

  213 designator_list: designator
  214                | designator_list designator

  215 designator: '[' constant_expression ']'
  216           | '.' IDENTIFIER

  217 statement: labeled_statement
  218          | compound_statement
  219          | expression_statement

  220 $@19: ε

  221 statement: $@19 selection_statement

  222 $@20: ε

  223 statement: $@20 iteration_statement
  224          | jump_statement

  225 labeled_statement: IDENTIFIER ':' statement
  226                  | CASE constant_expression ':' statement
  227                  | DEFAULT ':' statement

  228 compound_statement: '{' '}'

  229 $@21: ε

  230 compound_statement: '{' $@21 block_item_list '}'

  231 block_item_list: block_item
  232                | block_item_list block_item

  233 $@22: ε

  234 block_item: $@22 declaration

  235 $@23: ε

  236 block_item: $@23 statement

  237 expression_statement: ';'
  238                     | expression ';'

  239 selection_statement: IF '(' expression ')' statement

  240 $@24: ε

  241 selection_statement: IF '(' expression ')' statement ELSE $@24 statement
  242                    | SWITCH '(' expression ')' statement

  243 iteration_statement: WHILE '(' expression ')' statement
  244                    | DO statement WHILE '(' expression ')' ';'
  245                    | FOR '(' expression_statement expression_statement ')' statement
  246                    | FOR '(' expression_statement expression_statement expression ')' statement
  247                    | FOR '(' declaration expression_statement ')' statement
  248                    | FOR '(' declaration expression_statement expression ')' statement

  249 jump_statement: GOTO IDENTIFIER ';'
  250               | CONTINUE ';'
  251               | BREAK ';'

  252 $@25: ε

  253 jump_statement: RETURN $@25 ';'

  254 $@26: ε

  255 jump_statement: RETURN $@26 expression ';'

  256 $@27: ε

  257 translation_unit: $@27 external_declaration
  258                 | translation_unit external_declaration

  259 external_declaration: function_definition
  260                     | declaration

  261 $@28: ε

  262 $@29: ε

  263 function_definition: declaration_specifiers declarator $@28 declaration_list $@29 compound_statement

  264 $@30: ε

  265 function_definition: declaration_specifiers declarator $@30 compound_statement

  266 declaration_list: declaration
  267                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 29
    '%' (37) 35
    '&' (38) 24 51
    '(' (40) 4 7 9 14 15 23 31 162 171 172 173 194 201 202 203 204 239 241 242 243 244 245 246 247 248
    ')' (41) 4 7 9 14 15 23 31 162 171 172 173 194 201 202 203 204 239 241 242 243 244 245 246 247 248
    '*' (42) 25 33 168 169 174 175 176 177 199 200
    '+' (43) 26 37
    ',' (44) 15 17 76 89 142 148 149 152 181 183 188 207 210 211
    '-' (45) 27 38
    '.' (46) 10 216
    '/' (47) 34
    ':' (58) 61 144 145 225 226 227
    ';' (59) 78 79 136 237 238 244 249 250 251 253 255
    '<' (60) 43
    '=' (61) 64 91 154 212
    '>' (62) 44
    '?' (63) 61
    '[' (91) 6 163 164 165 166 167 168 169 170 195 196 197 198 199 200 215
    ']' (93) 6 163 164 165 166 167 168 169 170 195 196 197 198 199 200 215
    '^' (94) 53
    '{' (123) 14 15 129 130 146 147 148 149 206 207 228 230
    '|' (124) 55
    '}' (125) 14 15 129 130 146 147 148 149 206 207 228 230
    '~' (126) 28
    error (256)
    SIZEOF (258) 22 23
    PTR_OP (259) 11
    INC_OP (260) 12 19
    DEC_OP (261) 13 20
    LEFT_OP (262) 40
    RIGHT_OP (263) 41
    LE_OP (264) 45
    GE_OP (265) 46
    EQ_OP (266) 48
    NE_OP (267) 49
    AND_OP (268) 57
    OR_OP (269) 59
    MUL_ASSIGN (270) 65
    DIV_ASSIGN (271) 66
    MOD_ASSIGN (272) 67
    ADD_ASSIGN (273) 68
    SUB_ASSIGN (274) 69
    LEFT_ASSIGN (275) 70
    RIGHT_ASSIGN (276) 71
    AND_ASSIGN (277) 72
    XOR_ASSIGN (278) 73
    OR_ASSIGN (279) 74
    TYPEDEF <sym> (280) 93
    EXTERN <sym> (281) 95
    STATIC <sym> (282) 97 166 167
    AUTO <sym> (283) 99
    REGISTER <sym> (284) 101
    INLINE <sym> (285) 158
    RESTRICT <sym> (286) 156
    CHAR <sym> (287) 105
    SHORT <sym> (288) 107
    INT <sym> (289) 109
    LONG <sym> (290) 111
    SIGNED <sym> (291) 117
    UNSIGNED <sym> (292) 119
    FLOAT <sym> (293) 113
    DOUBLE <sym> (294) 115
    CONST <sym> (295) 155
    VOLATILE <sym> (296) 157
    VOID <sym> (297) 103
    BOOL <sym> (298) 121
    COMPLEX <sym> (299) 123
    IMAGINARY <sym> (300) 125
    USER_DEFINED <sym> (301) 126
    STRUCT <sym> (302) 132
    UNION <sym> (303) 133
    ENUM <sym> (304) 146 147 148 149 150
    ELLIPSIS <sym> (305) 181
    CASE (306) 226
    DEFAULT (307) 227
    IF (308) 239 241
    ELSE (309) 241
    SWITCH (310) 242
    WHILE (311) 243 244
    DO (312) 244
    FOR (313) 245 246 247 248
    GOTO (314) 249
    CONTINUE (315) 250
    BREAK (316) 251
    RETURN (317) 253 255
    CONSTANT <sym> (318) 2
    IDENTIFIER <sym> (319) 1 10 11 129 131 147 149 150 153 154 161 187 188 216 225 249
    STRING_LITERAL <sym> (320) 3


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    primary_expression <sym> (91)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <sym> (92)
        on left: 5 6 7 9 10 11 12 13 14 15
        on right: 6 7 9 10 11 12 13 18
    $@1 (93)
        on left: 8
        on right: 9
    argument_expression_list (94)
        on left: 16 17
        on right: 9 17
    unary_expression <sym> (95)
        on left: 18 19 20 21 22 23
        on right: 19 20 22 30 63
    unary_operator (96)
        on left: 24 25 26 27 28 29
        on right: 21
    cast_expression <sym> (97)
        on left: 30 31
        on right: 21 31 32 33 34 35
    multiplicative_expression <sym> (98)
        on left: 32 33 34 35
        on right: 33 34 35 36 37 38
    additive_expression <sym> (99)
        on left: 36 37 38
        on right: 37 38 39 40 41
    shift_expression <sym> (100)
        on left: 39 40 41
        on right: 40 41 42 43 44 45 46
    relational_expression <sym> (101)
        on left: 42 43 44 45 46
        on right: 43 44 45 46 47 48 49
    equality_expression <sym> (102)
        on left: 47 48 49
        on right: 48 49 50 51
    and_expression <sym> (103)
        on left: 50 51
        on right: 51 52 53
    exclusive_or_expression <sym> (104)
        on left: 52 53
        on right: 53 54 55
    inclusive_or_expression <sym> (105)
        on left: 54 55
        on right: 55 56 57
    logical_and_expression <sym> (106)
        on left: 56 57
        on right: 57 58 59
    logical_or_expression <sym> (107)
        on left: 58 59
        on right: 59 60 61
    conditional_expression <sym> (108)
        on left: 60 61
        on right: 61 62 77
    assignment_expression <sym> (109)
        on left: 62 63
        on right: 16 17 63 75 76 163 165 166 167 196 198 205
    assignment_operator (110)
        on left: 64 65 66 67 68 69 70 71 72 73 74
        on right: 63
    expression <sym> (111)
        on left: 75 76
        on right: 4 6 61 76 238 239 241 242 243 244 246 248 255
    constant_expression <sym> (112)
        on left: 77
        on right: 144 145 154 215 226
    declaration <symList> (113)
        on left: 78 79
        on right: 234 247 248 260 266 267
    declaration_specifiers <sym> (114)
        on left: 80 81 82 83 84 85 86 87
        on right: 78 79 81 83 85 87 184 185 186 263 265
    init_declarator_list <symList> (115)
        on left: 88 89
        on right: 79 89
    init_declarator <sym> (116)
        on left: 90 91
        on right: 88 89
    storage_class_specifier <sym> (117)
        on left: 93 95 97 99 101
        on right: 80 81
    $@2 (118)
        on left: 92
        on right: 93
    $@3 (119)
        on left: 94
        on right: 95
    $@4 (120)
        on left: 96
        on right: 97
    $@5 (121)
        on left: 98
        on right: 99
    $@6 (122)
        on left: 100
        on right: 101
    type_specifier <sym> (123)
        on left: 103 105 107 109 111 113 115 117 119 121 123 125 126 127 128
        on right: 82 83 139 140
    $@7 (124)
        on left: 102
        on right: 103
    $@8 (125)
        on left: 104
        on right: 105
    $@9 (126)
        on left: 106
        on right: 107
    $@10 (127)
        on left: 108
        on right: 109
    $@11 (128)
        on left: 110
        on right: 111
    $@12 (129)
        on left: 112
        on right: 113
    $@13 (130)
        on left: 114
        on right: 115
    $@14 (131)
        on left: 116
        on right: 117
    $@15 (132)
        on left: 118
        on right: 119
    $@16 (133)
        on left: 120
        on right: 121
    $@17 (134)
        on left: 122
        on right: 123
    $@18 (135)
        on left: 124
        on right: 125
    struct_or_union_specifier <sym> (136)
        on left: 129 130 131
        on right: 127
    struct_or_union <sym> (137)
        on left: 132 133
        on right: 129 130 131
    struct_declaration_list <symList> (138)
        on left: 134 135
        on right: 129 130 135
    struct_declaration <symList> (139)
        on left: 136
        on right: 134 135
    specifier_qualifier_list <sym> (140)
        on left: 137 138 139 140
        on right: 136 138 140 189 190
    struct_declarator_list <symList> (141)
        on left: 141 142
        on right: 136 142
    struct_declarator <sym> (142)
        on left: 143 144 145
        on right: 141 142
    enum_specifier <sym> (143)
        on left: 146 147 148 149 150
        on right: 128
    enumerator_list (144)
        on left: 151 152
        on right: 146 147 148 149 152
    enumerator (145)
        on left: 153 154
        on right: 151 152
    type_qualifier <sym> (146)
        on left: 155 156 157
        on right: 84 85 137 138 178 179
    function_specifier <sym> (147)
        on left: 158
        on right: 86 87
    declarator <sym> (148)
        on left: 159 160
        on right: 90 91 143 145 162 184 263 265
    direct_declarator <sym> (149)
        on left: 161 162 163 164 165 166 167 168 169 170 171 172 173
        on right: 159 160 163 164 165 166 167 168 169 170 171 172 173
    pointer (150)
        on left: 174 175 176 177
        on right: 159 176 177 191 193
    type_qualifier_list (151)
        on left: 178 179
        on right: 163 164 166 167 168 175 177 179
    parameter_type_list <symList> (152)
        on left: 180 181
        on right: 171 202 204
    parameter_list <symList> (153)
        on left: 182 183
        on right: 180 181 183
    parameter_declaration <sym> (154)
        on left: 184 185 186
        on right: 182 183
    identifier_list <symList> (155)
        on left: 187 188
        on right: 172 188
    type_name <sym> (156)
        on left: 189 190
        on right: 14 15 23 31
    abstract_declarator (157)
        on left: 191 192 193
        on right: 185 190 194
    direct_abstract_declarator (158)
        on left: 194 195 196 197 198 199 200 201 202 203 204
        on right: 192 193 197 198 200 203 204
    initializer <sym> (159)
        on left: 205 206 207
        on right: 91 208 209 210 211
    initializer_list <sym> (160)
        on left: 208 209 210 211
        on right: 14 15 206 207 210 211
    designation (161)
        on left: 212
        on right: 209 211
    designator_list (162)
        on left: 213 214
        on right: 212 214
    designator (163)
        on left: 215 216
        on right: 213 214
    statement (164)
        on left: 217 218 219 221 223 224
        on right: 225 226 227 236 239 241 242 243 244 245 246 247 248
    $@19 (165)
        on left: 220
        on right: 221
    $@20 (166)
        on left: 222
        on right: 223
    labeled_statement (167)
        on left: 225 226 227
        on right: 217
    compound_statement (168)
        on left: 228 230
        on right: 218 263 265
    $@21 (169)
        on left: 229
        on right: 230
    block_item_list (170)
        on left: 231 232
        on right: 230 232
    block_item (171)
        on left: 234 236
        on right: 231 232
    $@22 (172)
        on left: 233
        on right: 234
    $@23 (173)
        on left: 235
        on right: 236
    expression_statement (174)
        on left: 237 238
        on right: 219 245 246 247 248
    selection_statement (175)
        on left: 239 241 242
        on right: 221
    $@24 (176)
        on left: 240
        on right: 241
    iteration_statement (177)
        on left: 243 244 245 246 247 248
        on right: 223
    jump_statement (178)
        on left: 249 250 251 253 255
        on right: 224
    $@25 (179)
        on left: 252
        on right: 253
    $@26 (180)
        on left: 254
        on right: 255
    translation_unit (181)
        on left: 257 258
        on right: 0 258
    $@27 (182)
        on left: 256
        on right: 257
    external_declaration (183)
        on left: 259 260
        on right: 257 258
    function_definition (184)
        on left: 263 265
        on right: 259
    $@28 (185)
        on left: 261
        on right: 263
    $@29 (186)
        on left: 262
        on right: 263
    $@30 (187)
        on left: 264
        on right: 265
    declaration_list <symList> (188)
        on left: 266 267
        on right: 263 267


State 0

    0 $accept: • translation_unit $end

    $default  reduce using rule 256 ($@27)

    translation_unit  go to state 1
    $@27              go to state 2


State 1

    0 $accept: translation_unit • $end
  258 translation_unit: translation_unit • external_declaration

    $end          shift, and go to state 3
    INLINE        shift, and go to state 4
    RESTRICT      shift, and go to state 5
    CONST         shift, and go to state 6
    VOLATILE      shift, and go to state 7
    USER_DEFINED  shift, and go to state 8
    STRUCT        shift, and go to state 9
    UNION         shift, and go to state 10
    ENUM          shift, and go to state 11

    EXTERN     reduce using rule 94 ($@3)
    STATIC     reduce using rule 96 ($@4)
    AUTO       reduce using rule 98 ($@5)
    REGISTER   reduce using rule 100 ($@6)
    CHAR       reduce using rule 104 ($@8)
    SHORT      reduce using rule 106 ($@9)
    INT        reduce using rule 108 ($@10)
    LONG       reduce using rule 110 ($@11)
    SIGNED     reduce using rule 116 ($@14)
    UNSIGNED   reduce using rule 118 ($@15)
    FLOAT      reduce using rule 112 ($@12)
    DOUBLE     reduce using rule 114 ($@13)
    VOID       reduce using rule 102 ($@7)
    BOOL       reduce using rule 120 ($@16)
    COMPLEX    reduce using rule 122 ($@17)
    IMAGINARY  reduce using rule 124 ($@18)
    $default   reduce using rule 92 ($@2)

    declaration                go to state 12
    declaration_specifiers     go to state 13
    storage_class_specifier    go to state 14
    $@2                        go to state 15
    $@3                        go to state 16
    $@4                        go to state 17
    $@5                        go to state 18
    $@6                        go to state 19
    type_specifier             go to state 20
    $@7                        go to state 21
    $@8                        go to state 22
    $@9                        go to state 23
    $@10                       go to state 24
    $@11                       go to state 25
    $@12                       go to state 26
    $@13                       go to state 27
    $@14                       go to state 28
    $@15                       go to state 29
    $@16                       go to state 30
    $@17                       go to state 31
    $@18                       go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    enum_specifier             go to state 35
    type_qualifier             go to state 36
    function_specifier         go to state 37
    external_declaration       go to state 38
    function_definition        go to state 39


State 2

  257 translation_unit: $@27 • external_declaration

    INLINE        shift, and go to state 4
    RESTRICT      shift, and go to state 5
    CONST         shift, and go to state 6
    VOLATILE      shift, and go to state 7
    USER_DEFINED  shift, and go to state 8
    STRUCT        shift, and go to state 9
    UNION         shift, and go to state 10
    ENUM          shift, and go to state 11

    EXTERN     reduce using rule 94 ($@3)
    STATIC     reduce using rule 96 ($@4)
    AUTO       reduce using rule 98 ($@5)
    REGISTER   reduce using rule 100 ($@6)
    CHAR       reduce using rule 104 ($@8)
    SHORT      reduce using rule 106 ($@9)
    INT        reduce using rule 108 ($@10)
    LONG       reduce using rule 110 ($@11)
    SIGNED     reduce using rule 116 ($@14)
    UNSIGNED   reduce using rule 118 ($@15)
    FLOAT      reduce using rule 112 ($@12)
    DOUBLE     reduce using rule 114 ($@13)
    VOID       reduce using rule 102 ($@7)
    BOOL       reduce using rule 120 ($@16)
    COMPLEX    reduce using rule 122 ($@17)
    IMAGINARY  reduce using rule 124 ($@18)
    $default   reduce using rule 92 ($@2)

    declaration                go to state 12
    declaration_specifiers     go to state 13
    storage_class_specifier    go to state 14
    $@2                        go to state 15
    $@3                        go to state 16
    $@4                        go to state 17
    $@5                        go to state 18
    $@6                        go to state 19
    type_specifier             go to state 20
    $@7                        go to state 21
    $@8                        go to state 22
    $@9                        go to state 23
    $@10                       go to state 24
    $@11                       go to state 25
    $@12                       go to state 26
    $@13                       go to state 27
    $@14                       go to state 28
    $@15                       go to state 29
    $@16                       go to state 30
    $@17                       go to state 31
    $@18                       go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    enum_specifier             go to state 35
    type_qualifier             go to state 36
    function_specifier         go to state 37
    external_declaration       go to state 40
    function_definition        go to state 39


State 3

    0 $accept: translation_unit $end •

    $default  accept


State 4

  158 function_specifier: INLINE •

    $default  reduce using rule 158 (function_specifier)


State 5

  156 type_qualifier: RESTRICT •

    $default  reduce using rule 156 (type_qualifier)


State 6

  155 type_qualifier: CONST •

    $default  reduce using rule 155 (type_qualifier)


State 7

  157 type_qualifier: VOLATILE •

    $default  reduce using rule 157 (type_qualifier)


State 8

  126 type_specifier: USER_DEFINED •

    $default  reduce using rule 126 (type_specifier)


State 9

  132 struct_or_union: STRUCT •

    $default  reduce using rule 132 (struct_or_union)


State 10

  133 struct_or_union: UNION •

    $default  reduce using rule 133 (struct_or_union)


State 11

  146 enum_specifier: ENUM • '{' enumerator_list '}'
  147               | ENUM • IDENTIFIER '{' enumerator_list '}'
  148               | ENUM • '{' enumerator_list ',' '}'
  149               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  150               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    '{'         shift, and go to state 42


State 12

  260 external_declaration: declaration •

    $default  reduce using rule 260 (external_declaration)


State 13

   78 declaration: declaration_specifiers • ';'
   79            | declaration_specifiers • init_declarator_list ';'
  263 function_definition: declaration_specifiers • declarator $@28 declaration_list $@29 compound_statement
  265                    | declaration_specifiers • declarator $@30 compound_statement

    IDENTIFIER  shift, and go to state 43
    '('         shift, and go to state 44
    '*'         shift, and go to state 45
    ';'         shift, and go to state 46

    init_declarator_list  go to state 47
    init_declarator       go to state 48
    declarator            go to state 49
    direct_declarator     go to state 50
    pointer               go to state 51


State 14

   80 declaration_specifiers: storage_class_specifier •
   81                       | storage_class_specifier • declaration_specifiers

    INLINE        shift, and go to state 4
    RESTRICT      shift, and go to state 5
    CONST         shift, and go to state 6
    VOLATILE      shift, and go to state 7
    USER_DEFINED  shift, and go to state 8
    STRUCT        shift, and go to state 9
    UNION         shift, and go to state 10
    ENUM          shift, and go to state 11

    TYPEDEF    reduce using rule 92 ($@2)
    EXTERN     reduce using rule 94 ($@3)
    STATIC     reduce using rule 96 ($@4)
    AUTO       reduce using rule 98 ($@5)
    REGISTER   reduce using rule 100 ($@6)
    CHAR       reduce using rule 104 ($@8)
    SHORT      reduce using rule 106 ($@9)
    INT        reduce using rule 108 ($@10)
    LONG       reduce using rule 110 ($@11)
    SIGNED     reduce using rule 116 ($@14)
    UNSIGNED   reduce using rule 118 ($@15)
    FLOAT      reduce using rule 112 ($@12)
    DOUBLE     reduce using rule 114 ($@13)
    VOID       reduce using rule 102 ($@7)
    BOOL       reduce using rule 120 ($@16)
    COMPLEX    reduce using rule 122 ($@17)
    IMAGINARY  reduce using rule 124 ($@18)
    $default   reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 14
    $@2                        go to state 15
    $@3                        go to state 16
    $@4                        go to state 17
    $@5                        go to state 18
    $@6                        go to state 19
    type_specifier             go to state 20
    $@7                        go to state 21
    $@8                        go to state 22
    $@9                        go to state 23
    $@10                       go to state 24
    $@11                       go to state 25
    $@12                       go to state 26
    $@13                       go to state 27
    $@14                       go to state 28
    $@15                       go to state 29
    $@16                       go to state 30
    $@17                       go to state 31
    $@18                       go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    enum_specifier             go to state 35
    type_qualifier             go to state 36
    function_specifier         go to state 37


State 15

   93 storage_class_specifier: $@2 • TYPEDEF

    TYPEDEF  shift, and go to state 53


State 16

   95 storage_class_specifier: $@3 • EXTERN

    EXTERN  shift, and go to state 54


State 17

   97 storage_class_specifier: $@4 • STATIC

    STATIC  shift, and go to state 55


State 18

   99 storage_class_specifier: $@5 • AUTO

    AUTO  shift, and go to state 56


State 19

  101 storage_class_specifier: $@6 • REGISTER

    REGISTER  shift, and go to state 57


State 20

   82 declaration_specifiers: type_specifier •
   83                       | type_specifier • declaration_specifiers

    INLINE        shift, and go to state 4
    RESTRICT      shift, and go to state 5
    CONST         shift, and go to state 6
    VOLATILE      shift, and go to state 7
    USER_DEFINED  shift, and go to state 8
    STRUCT        shift, and go to state 9
    UNION         shift, and go to state 10
    ENUM          shift, and go to state 11

    TYPEDEF    reduce using rule 92 ($@2)
    EXTERN     reduce using rule 94 ($@3)
    STATIC     reduce using rule 96 ($@4)
    AUTO       reduce using rule 98 ($@5)
    REGISTER   reduce using rule 100 ($@6)
    CHAR       reduce using rule 104 ($@8)
    SHORT      reduce using rule 106 ($@9)
    INT        reduce using rule 108 ($@10)
    LONG       reduce using rule 110 ($@11)
    SIGNED     reduce using rule 116 ($@14)
    UNSIGNED   reduce using rule 118 ($@15)
    FLOAT      reduce using rule 112 ($@12)
    DOUBLE     reduce using rule 114 ($@13)
    VOID       reduce using rule 102 ($@7)
    BOOL       reduce using rule 120 ($@16)
    COMPLEX    reduce using rule 122 ($@17)
    IMAGINARY  reduce using rule 124 ($@18)
    $default   reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 14
    $@2                        go to state 15
    $@3                        go to state 16
    $@4                        go to state 17
    $@5                        go to state 18
    $@6                        go to state 19
    type_specifier             go to state 20
    $@7                        go to state 21
    $@8                        go to state 22
    $@9                        go to state 23
    $@10                       go to state 24
    $@11                       go to state 25
    $@12                       go to state 26
    $@13                       go to state 27
    $@14                       go to state 28
    $@15                       go to state 29
    $@16                       go to state 30
    $@17                       go to state 31
    $@18                       go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    enum_specifier             go to state 35
    type_qualifier             go to state 36
    function_specifier         go to state 37


State 21

  103 type_specifier: $@7 • VOID

    VOID  shift, and go to state 59


State 22

  105 type_specifier: $@8 • CHAR

    CHAR  shift, and go to state 60


State 23

  107 type_specifier: $@9 • SHORT

    SHORT  shift, and go to state 61


State 24

  109 type_specifier: $@10 • INT

    INT  shift, and go to state 62


State 25

  111 type_specifier: $@11 • LONG

    LONG  shift, and go to state 63


State 26

  113 type_specifier: $@12 • FLOAT

    FLOAT  shift, and go to state 64


State 27

  115 type_specifier: $@13 • DOUBLE

    DOUBLE  shift, and go to state 65


State 28

  117 type_specifier: $@14 • SIGNED

    SIGNED  shift, and go to state 66


State 29

  119 type_specifier: $@15 • UNSIGNED

    UNSIGNED  shift, and go to state 67


State 30

  121 type_specifier: $@16 • BOOL

    BOOL  shift, and go to state 68


State 31

  123 type_specifier: $@17 • COMPLEX

    COMPLEX  shift, and go to state 69


State 32

  125 type_specifier: $@18 • IMAGINARY

    IMAGINARY  shift, and go to state 70


State 33
